# sparse-autoencoders-on-chem-llm

./: .gitignore  README.md  pyproject.toml  requirements.txt
chemsae/: __init__.py  activations.py  analysis.py  concepts.py  config.py  controls.py  data.py  plots.py  sae.py  training.py
data/: smiles.parquet
results/: RESULTS.md  layer_comparison_summary.csv  smoke_labels.csv
results/layer_02/: neurons.csv  neurons.json  sae.csv  sae.json  sae_top_tokens.csv
results/layer_04/: neurons.csv  neurons.json  sae.csv  sae.json  sae_top_tokens.csv
results/layer_06/: neurons.csv  neurons.json  sae.csv  sae.json  sae_seed1.csv  sae_seed1.json  sae_seed1_top_tokens.csv  sae_seed2.csv  sae_seed2.json  sae_seed2_top_tokens.csv  sae_seed3.csv  sae_seed3.json  sae_seed3_top_tokens.csv  sae_seed4.csv  sae_seed4.json  sae_seed4_top_tokens.csv  sae_shuffled.csv  sae_shuffled.json  sae_specificity.csv  sae_top_tokens.csv
results/tables/: layer_06_features.csv  layer_06_per_concept.csv  layer_06_specificity.csv  layer_comparison.csv  per_concept_per_layer.csv
scripts/: 00_smoke_test.py  01_extract_activations.py  02_train_sae.py  03_analyze_features.py  04_specificity_tests.py  05_layer_comparison.py  06_shuffled_control.py  07_neuron_baseline.py  08_make_paper_artifacts.py  09_chirality_test.py  10_heldout_generalization.py  11_chirality_localization.py
