[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chemsae"
version = "0.1.0"
description = "Sparse autoencoders on a chemistry language model (ChemBERTa)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5",
    "transformers>=4.45",
    "datasets>=3.0",
    "tokenizers>=0.20",
    "rdkit>=2024.3.5",
    "numpy>=1.26",
    "pandas>=2.2",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
    "safetensors>=0.4",
]

[tool.setuptools.packages.find]
include = ["chemsae*"]
